Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-2940

QDockWidget: When floating by dragging it out via the titlebar it does not get the size it originally had when floated last

XMLWordPrintable

    • 8de28b65bd18bea49fa57682d7ec3c3cd3cc4e7a (4.8)

      QDockWidget: When floating by dragging it out via the titlebar it does not get the size it originally had when floated last, doubleclicking on the titlebar works. This is not what native applications on Windows do at least.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            miknuut Mikko Knuutila (Inactive)
            anshaw Andy Shaw (closed Nokia identity) (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes