Fix for restoring dockwidget's size when it gets dragged.

When user drags a dockwidget out of the docking area, restore widget's
previous floating size and center it's titlebar under the mouse.

Task-number: QTBUG-2940